--- a/base.css
+++ b/base.css
@@ -117,7 +117,7 @@ body {
 	background: white;
     position: absolute;
     z-index: 1;
-    top: 5px;
+    top: 100px;
     padding: 5px;
     border-radius: 3px;
     font-size: 20px;
@@ -155,145 +155,14 @@ body {
 	color: white;	
 	cursor: pointer;
 	font-size: 15px;
+	margin-top: 5px;
+}
+
+.dynamicDiv {
+	margin-right: 5px;
 }
 
 .layer-on {
 	background-color: rgba(0, 0, 255, 1);
 }
 
-.ol-zoom {
-  top: 12px;
-  left: 12px;
-}
-.ol-toggle-options {
-  z-index: 1000;
-  background: rgba(255,255,255,0.4);
-  border-radius: 4px;
-  padding: 2px;
-  position: absolute;
-  left: 8px;
-  top: 8px;
-}
-#updateFilterButton, #resetFilterButton {
-  height: 22px;
-  width: 22px;
-  text-align: center;
-  text-decoration: none !important;
-  line-height: 22px;
-  margin: 1px;
-  font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
-  font-weight: bold !important;
-  background: rgba(0,60,136,0.5);
-  color: white !important;
-  padding: 2px;
-}
-.ol-toggle-options a {
-  background: rgba(0,60,136,0.5);
-  color: white;
-  display: block;
-  font-family: 'Lucida Grande',Verdana,Geneva,Lucida,Arial,Helvetica,sans-serif;
-  font-size: 19px;
-  font-weight: bold;
-  height: 22px;
-  line-height: 11px;
-  margin: 1px;
-  padding: 0;
-  text-align: center;
-  text-decoration: none;
-  width: 22px;
-  border-radius: 2px;
-}
-.ol-toggle-options a:hover {
-  color: #fff;
-  text-decoration: none;
-  background: rgba(0,60,136,0.7);
-}
-/* Toolbar styles */
-#toolbar {
-    position: relative;
-    padding-bottom: 0.5em;
-}
-#toolbar ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-#toolbar ul li {
-    float: left;
-    padding-right: 1em;
-    padding-bottom: 0.5em;
-}
-#toolbar ul li a {
-    font-weight: bold;
-    font-size: smaller;
-    vertical-align: middle;
-    color: black;
-    text-decoration: none;
-}
-#toolbar ul li a:hover {
-    text-decoration: underline;
-}
-#toolbar ul li * {
-    vertical-align: middle;
-}
-#map {
-    clear: both;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-#location {
-	display: inline-block;
-	margin-left: 20px;
-}
-#scale {
-	display: inline-block;
-}
-/* Styles used by the default GetFeatureInfo output, added to make IE happy */
-table.featureInfo, table.featureInfo td, table.featureInfo th {
-    border: 1px solid #ddd;
-    border-collapse: collapse;
-    margin: 0;
-    padding: 0;
-    font-size: 90%;
-    padding: .2em .1em;
-}
-table.featureInfo th {
-    padding: .2em .2em;
-    font-weight: bold;
-    background: #eee;
-}
-table.featureInfo td {
-    background: #fff;
-}
-table.featureInfo tr.odd td {
-    background: #eee;
-}
-table.featureInfo caption {
-    text-align: left;
-    font-size: 100%;
-    font-weight: bold;
-    padding: .2em .2em;
-}
-
-#overviewMap {
-	width: 50px;
-	height: 50px;
-}
-
-#popup {
-	background: white;
-}
-#toolbox {
-	position: absolute;
-	right: 5px;
-	bottom: 5px;
-	z-index: 1;
-}
-#toolbox button {
-	width: 25px;
-	height: 25px;
-}
-.ol3-21-popup-window {
-	background: white;
-}
